@@ -1,4 +1,7 @@
 2005-10-01  Benhur Stein <benhur@inf.ufsm.br>
+        * StatViewer/PieCell.m: autosize pie; draw arc around "other" value.
+
+2005-10-01  Benhur Stein <benhur@inf.ufsm.br>
         * SpaceTimeViewer/STEntityTypeLayout.[hm],
           SpaceTimeViewer/STLayoutEditor.{h,m,gorm}: keep user drawName choice;
           add choice for drawing pseudo-3D lines for variables
